# AgentLoom

./: .gitignore  README.md  pyproject.toml
client/: package-lock.json  package.json
client/electron/: main.js  preload.js  python-manager.js
client/src/: App.tsx  main.tsx  vite-env.d.ts
client/src/components/: BrowserBlocked.tsx
client/src/services/: api.ts  websocket.ts
client/src/stores/: chatStore.ts
client/src/styles/: globals.css
client/src/types/: index.ts
data/skills_install/find-skills/: SKILL.md
data/skills_install/skill-vetter/: SKILL.md
docs/: product.md
docs/superpowers/plans/: 2026-04-01-group-chat-ux-redesign.md
docs/superpowers/specs/: 2026-04-01-group-chat-ux-redesign-design.md  2026-04-02-four-phase-pipeline-design.md  2026-04-09-batch1-agent-identity-llm-design.md  2026-04-09-batch2-executor-personality-chat-history-panel.md  2026-04-09-batch3-execution-control.md  2026-04-09-batch4-packaging-and-polish.md
src/agentcrewchat/graph/: decision_handler.py  event_bus.py  executor_identity.py  orchestrator.py  pause_manager.py
src/agentcrewchat/tasks/: workspace.py
src/agentloom/config/: __init__.py  loader.py  manifest.py  models.py
src/agentloom/graph/: __init__.py  builder.py  event_bus.py  state.py
src/agentloom/llm/: __init__.py  factory.py
src/agentloom/tools/: python_tool.py  shell_tool.py  tool_registry.py
src/agentloom/ui/: main_window.py
tests/: test_config_loader.py  test_event_bus.py  test_format_blueprint_message.py  test_graph_compile.py  test_llm_factory.py  test_mcp_save.py  test_tool_registry.py
(+20 files in other folders)
