[project]
name = "agentloom"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2"]

[project.scripts]
agentloom = "agentloom.__main__:main"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentloom"]

[dependency-groups]
dev = ["pytest>=8"]
