[project]
name = "agentloom"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=1.4.0",
    "langchain-core>=1.2.23",
    "langchain-openai>=1.1.12",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pydantic>=2",
]

[project.scripts]
agentloom = "agentloom.__main__:main"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentloom"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[dependency-groups]
dev = ["pytest>=8"]
